feat: 加载存档、删除存档
